--- a/index.html
+++ b/index.html
@@ -20,17 +20,21 @@
 <body>
     <section class="container-1">
         <div class="half-width">
+
+            <h1 class="tittle-1">Hello, I'm <span class="span-1">Oishee </span>,</h1>
+
             <div class="side-border">
-                <h1 class="tittle-1">Stay Focused on </h1>
-                <h1 class="tittle-1">
-                    <span class="span-1">mission 2022</span>
-                </h1>
+                <h2 class="tittle-1">
+                    <span class="span-1">Front-end </span>
+                    Web Developer.
+                </h2>
+
             </div>
 
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus, sequi? Lorem ipsum dolor, sit amet
-                consectetur adipisicing elit. Incidunt tempora ab odio optio ut. Sapiente iusto doloremque eaque totam
-                deserunt. </p>
-            <a href="">hire me</a>
+            <p>I am a web developer with extensive experience for over 5 years. my expertice is to creat website and
+                photoshop and many more. </p>
+            <a href="">More about me</a>
+            <p>Scroll down to explore more about me.</p>
         </div>
 
         <div class="half-width">
@@ -40,7 +44,8 @@
     </section>
 
 
-    <h1 id="heading">My mission in <span class="span-1">2022</span></h1>
+    <h1 id="heading"> My <span class="span-1">Services</span> </h1>
+
 
     <section class="container-2">
 
@@ -52,8 +57,9 @@
                 <img src="images/illustrators/illustrator-1.png" alt="">
             </div>
             <div class="text">
-                <h2 class="card-title">Mission</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, alias.</p>
+                <h2 class="card-title">HTML & CSS Responsive Web Design</h2>
+                <p>Enterprise-class websites need consistent colors, fonts, and design to match the organization's
+                    branding guidelines. </p>
             </div>
         </div>
         <div class="box" id="box-2">
@@ -61,8 +67,8 @@
                 <img src="images/illustrators/illustrator-2.png" alt="">
             </div>
             <div class="text">
-                <h2 class="card-title">Vission</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, alias.</p>
+                <h2 class="card-title">React JS Development</h2>
+                <p>ReactJS is renowned for its extensibility, adjustability, and convenience.</p>
             </div>
         </div>
         <div class="box" id="box-3">
@@ -70,8 +76,9 @@
                 <img src="images/illustrators/illustrator-3.png" alt="">
             </div>
             <div class="text">
-                <h2 class="card-title">Goals</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, alias.</p>
+                <h2 class="card-title">Node.js Development
+                </h2>
+                <p>Node.js enables fast and scalable server-side and networking applications.</p>
             </div>
         </div>
 
@@ -83,12 +90,11 @@
             <img src="images/pictures/coding.png" alt="">
         </div>
         <div class="half-width">
-            <h1 class="tittle-2">Develop </h1>
-            <h1 class="tittle-2"> Without Limits</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex dolorum odit, ipsa obcaecati deserunt qui
-                cumque
-                vel, quis aliquid vero animi sint! Sequi accusamus aliquam corporis iure explicabo quam quibusdam?</p>
-            <a href="">read the documentation</a>
+            <h1 class="tittle-2">Discover </h1>
+            <h1 class="tittle-2"> About me</h1>
+            <p>My name is Oishee . I am a front end web developer. I am very passionate and dedicated to my work. I have
+                aquired the skills necessary to build a wonderful website.</p>
+            <a href="">Download CV</a>
         </div>
     </section>
 
@@ -96,17 +102,40 @@
 
     <section class="container-1">
         <div class="half-width">
-            <h1 class="tittle-2">Know our</h1>
-            <h1 class="tittle-2">Global Community</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem veniam sapiente consequuntur aliquam,
-                incidunt magnam perferendis cupiditate neque molestias delectus facilis hic quae, impedit dolore qui
-                repellat excepturi inventore laudantium.</p>
-            <a href="">read the documentation</a>
+            <h1 class="tittle-2">My project</h1>
+
+            <p>It's a project of Global Communities (formerly CHF International).</p>
+            <a href="">Read the documentation</a>
         </div>
         <div class="half-width">
             <img src="images/pictures/project.png" alt="">
         </div>
     </section>
+
+
+
+    <section class="contact-background">
+        <h1 id="heading-3"> Get in Touch </h1>
+        <div class="container-3">
+            <div class="my-info">
+                <h3>Feel free to call</h3>
+                <h3>phone : 01987453921</h3>
+                <h3>e-mail : <a href="">faujiaakhteroishee@gmail.com</a></h3>
+                <h3>address : Dhaka, Bangladesh</h3>
+            </div>
+
+            <div class="your-info">
+                <p>Name : <input type="text"></p>
+                <p>E-mail : <input type="email" name="" id=""></p>
+                <button type="submit">Send</button>
+
+            </div>
+        </div>
+    </section>
+
+
+
+
 
     <footer>
         <h2 class="footer-heading">mission
